Bug 356169 - After cropping an animation, Krita is unable to get me to other frames
Summary: After cropping an animation, Krita is unable to get me to other frames
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 2.9.9
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-01 18:24 UTC by Agustín Torena
Modified: 2015-12-14 20:39 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Error screenshot when using menu Trim to selection. (36.28 KB, image/jpeg)
2015-12-12 16:30 UTC, Bhupen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Agustín Torena 2015-12-01 18:24:16 UTC
After finishing a short animation, I tried to crop the canvas, so the drawing would be centered. After cropping, some of the drawings in several frames were moved, and Krita became unable to move to other frames after a moment. The animation had several layers, and only six frames.

This is a message it showed after noting me of the error:
ASSERT (krita): "m_textureTiles.size() > tile" in file F:\dev\desktop64\calligra\krita\ui\opengl/kis_opengl_image_textures.h, line 116

Reproducible: Couldn't Reproduce

Steps to Reproduce:
1. Make an animation with several frames
2. Crop down the size of the canvas
3. Try to go to a different frame

Actual Results:  
Krita would show me the message pasted above, and give me the option to continue, ignoring the error, but I was unable to keep working; and the option to abort.

Expected Results:  
It should have changed frames as it usually did.

Again, I tried to reproduce it, but couldn't, even though it happened twice (the second time being after restarting Krita).
Comment 1 Bhupen 2015-12-03 15:07:33 UTC
Same issue with Menu: Image->Trim to selection
Comment 2 Nicholas LaPointe 2015-12-12 04:47:01 UTC
I'm able to produce a similar bug that crashes with the same assertion. After resizing the canvas, Krita crashes while attempting to play an animation that had already been played before the canvas was resized.
I can reproduce this by following these steps:
	1. Create new document (5000x5000px)
	2. Add two frames
	3. Go to frame 0
	4. Play animation
	5. Resize canvas to 500x500px
	6. Go to frame 0
	7. Play animation
	[Krita crashes with "ASSERT (krita): "m_textureTiles.size() > tile" in file krita/ui/opengl/kis_opengl_image_textures.h, line 116"]
Comment 3 Halla Rempt 2015-12-12 14:21:21 UTC
Can you check with today's 2.9.10? That should have fixed the issues with cropping.
Comment 4 Bhupen 2015-12-12 16:29:23 UTC
Menu: Image->Trim to selection still does not work with 2.9.10.
Getting attached error.
Comment 5 Bhupen 2015-12-12 16:30:55 UTC
Created attachment 96016 [details]
Error screenshot when using menu Trim to selection.
Comment 6 Nicholas LaPointe 2015-12-14 01:27:07 UTC
I can still reproduce this by using the same steps on 314058c.
Comment 7 Dmitry Kazakov 2015-12-14 14:31:11 UTC
Confirmed
Comment 8 Dmitry Kazakov 2015-12-14 20:30:58 UTC
Git commit 9321dd9f950da3ef5ef79098de624cf7a5c59f84 by Dmitry Kazakov.
Committed on 14/12/2015 at 20:30.
Pushed by dkazakov into branch 'krita-animation-pentikainen'.

Fix processing non-animated frames as well

M  +6    -2    krita/image/kis_layer_utils.cpp

http://commits.kde.org/calligra/9321dd9f950da3ef5ef79098de624cf7a5c59f84
Comment 9 Dmitry Kazakov 2015-12-14 20:30:59 UTC
Git commit 48ba1a8d9cb3a0f5cc5e27b6aad3634dc8cc5f6c by Dmitry Kazakov.
Committed on 14/12/2015 at 20:30.
Pushed by dkazakov into branch 'krita-animation-pentikainen'.

Invalidate frames cache synchronously with emitting global image signals

Otherwise we get a crash if we try to upload a cached frame which was
generated with a different size of the image

M  +7    -0    krita/image/kis_image_signal_router.cpp

http://commits.kde.org/calligra/48ba1a8d9cb3a0f5cc5e27b6aad3634dc8cc5f6c
Comment 10 Dmitry Kazakov 2015-12-14 20:39:17 UTC
Git commit 866fbf108ceff1145da2ccd8084802fb449a16f9 by Dmitry Kazakov.
Committed on 14/12/2015 at 20:31.
Pushed by dkazakov into branch 'master'.

Fix processing non-animated frames as well

M  +6    -2    krita/image/kis_layer_utils.cpp

http://commits.kde.org/krita/866fbf108ceff1145da2ccd8084802fb449a16f9
Comment 11 Dmitry Kazakov 2015-12-14 20:39:18 UTC
Git commit d52275c4d85731db242bab61a933bad5915cda7f by Dmitry Kazakov.
Committed on 14/12/2015 at 20:32.
Pushed by dkazakov into branch 'master'.

Invalidate frames cache synchronously with emitting global image signals

Otherwise we get a crash if we try to upload a cached frame which was
generated with a different size of the image

M  +7    -0    krita/image/kis_image_signal_router.cpp

http://commits.kde.org/krita/d52275c4d85731db242bab61a933bad5915cda7f