Invalidate frames cache synchronously with emitting global image signals

Otherwise we get a crash if we try to upload a cached frame which was
generated with a different size of the image

BUG:356169